# tokscale

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  README.ja.md  README.ko.md  README.md  README.zh-cn.md  package.json
.github/workflows/: build-native.yml  client_registry_ci.yml  codspeed.yml  core_ci.yml  frontend_ci.yml  launcher_validation.yml  publish-cli.yml  test_coverage.yml
crates/tokscale-cli/: Cargo.toml
crates/tokscale-core/: Cargo.toml  build.rs  client-catalog.json
crates/tokscale-core/benches/: aggregation.rs  core_benchmarks.rs  normalization.rs
crates/tokscale-core/src/: aggregator.rs  client_catalog.rs  clients.rs  lib.rs  lib_tests.rs  local_clients.rs  message_cache.rs  model_aliases.rs  paths.rs  provider_identity.rs  scanner.rs  sessionize.rs  usage_views.rs
crates/tokscale-core/src/adapters/: antigravity.rs  antigravity_cli.rs  cache.rs  claude.rs  codebuff.rs  codex.rs  crush.rs  discover.rs  file.rs  gjc.rs  goose.rs  hermes.rs  junie.rs  kilo.rs  kiro.rs  micode.rs  mod.rs  omp.rs  openclaw.rs  opencode.rs  pi.rs  trae.rs  vscode_tasks.rs  zed.rs
crates/tokscale-core/src/aggregate/: accumulators.rs  config.rs  engine.rs  keys.rs  mod.rs  parity_tests.rs  tui.rs  views.rs
crates/tokscale-core/src/pricing/: aliases.rs  custom.rs  litellm.rs  lookup.rs  lookup_tests.rs  mod.rs  models_dev.rs  openrouter.rs
crates/tokscale-core/src/sessions/: amp.rs  antigravity.rs  antigravity_cli.rs  claudecode.rs  cline.rs  codebuff.rs  codex.rs  commandcode.rs  copilot.rs  crush.rs  cursor.rs  droid.rs  gemini.rs  gjc.rs  goose.rs  grok.rs  hermes.rs  intern.rs  junie.rs  kilo.rs  kilocode.rs  kimi.rs  kiro.rs  micode.rs  mod.rs  mux.rs  openclaw.rs  opencode.rs  pi.rs  qwen.rs  roocode.rs  trae.rs  utils.rs  warp.rs  zcode.rs  zed.rs
crates/tokscale-core/tests/: anthropic_catalog.rs  codebuff.rs  gjc.rs  hermes.rs
crates/tokscale-core/tests/fixtures/: local_model_ids.txt
docs/: cli.md  clients.md  configuration.md  development.md  fork.md  pricing.md
docs/adr/: 0001-no-silent-fallback.md  0002-claude-placeholder-is-not-synthetic-source.md  0003-pi-and-omp-are-separate-clients.md  0004-cwd-workspace-attribution.md  0005-local-client-boundaries.md  0006-agent-identity-for-agents-tab.md  0007-client-identity-catalog.md  0008-single-copy-memory-pipeline.md  0009-ahead-only-upstream-policy.md  0010-period-views-derive-from-daily.md  0011-token-derived-local-cost.md  (+4 more)
scripts/: check-release-workflow-safety.py  generate-client-registry.ts  test-package-launchers.sh  test-release-workflow-safety.sh
(+73 files in other folders)
